# asapp

./: .gitignore  0_Snakefile_fig.smk  0_Snakefile_simdata.smk  0_asap_fig_noise_3levels.py  0_asap_pipeline.py  0_asap_step2_nmf.py  0_asap_tutorial.ipynb  0_asap_wip.py  0_nmf_model.py  0_runasap.py  0_sim_step1_data.py  0_sim_step2_asap.py  0_sim_step3_asapfull.py  0_temp.py  1_asap_step1_rp.py  1_asap_step2_nmf.py  1_breastn.py  1_fig1_step1.py  1_gtex_bulk.py  1_gtex_mix.py  1_gtex_sc.py  1_pbmc.py  1_pbmc_1ds.py  1_pbmc_2ds.py  1_pbmc_org.py  1_tabsap_immmix.py  1_tabsap_ts_immune_only.py  1a_sim_snakefile.smk  1a_sim_snakefile_data.smk  1a_sim_step1_data.py  1b_sim_snakefile.smk  1b_sim_step2_nmf.py  1b_sim_step3_viz.py  2_Snakefile_fig.smk  2_Snakefile_simdata.smk  2_sim_snakefile_data.smk  2_sim_snakefile_fig1a.smk  2_sim_step1_data.py  2_sim_step2_asap.py  2_sim_step2_rppca.py  (+56 more)
R/: asapp_analysis.R  fig_topic_ct_distribution.R  r_umap.R
asap/: CMakeLists.txt  annotation.py  factorize.py  setup.py
asap/R/: r_umap.R
asap/data/: dataloader.py  sim.py
asap/include/: cpp_asap.hh  dcpoisson_nmf_model.hh  eigen_util.h  gamma_parameter.hh  math.hh  mmutil.h  poisson_nmf_model.h  poisson_nmf_model.hh
asap/model/: nmf.py  rpstruct.py
asap/python/: scannotation.py
asap/python/data/: _dataloader.py
asap/python/model/: _dcpmf.py
asap/src/: cpp_asap.cpp  debug_asap.cpp  main.cpp
asap/util/: _scanorama.py  analysis.py  batch_correction.py  lina.py  plots.py  preprocessing.py  scanpy.py
asapp/: 00_cluster_metrics.ipynb  00_data_prep.py  00_glm_exercise.ipynb  (+38 more)
(+278 files in other folders)
